<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.team33.cmd.files</groupId>
    <artifactId>files-root</artifactId>
    <version>2.8.3</version>
    <packaging>pom</packaging>

    <name>CMD Files Root</name>
    <description>A command line tool to perform various tasks on the file system - root module.</description>
    <url>http://team33.de/dev/cmd-files</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Andreas Kluge-Kaindl</name>
            <email>akk-pg@team33.de</email>
            <organization>team33.de</organization>
            <organizationUrl>https://github.com/akk-team33/</organizationUrl>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/akk-team33/cmd-files.git</connection>
        <developerConnection>scm:git:ssh://github.com:akk-team33/cmd-files.git</developerConnection>
        <url>https://github.com/akk-team33/cmd-files</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <copyright.year>2024</copyright.year>
        <maven.plugin.validation>VERBOSE</maven.plugin.validation>
    </properties>

    <modules>
        <module>files-main</module>
        <module>files-fat</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>de.team33.patterns</groupId>
                <artifactId>patterns-bom</artifactId>
                <version>1.20.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.8.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>de.team33.testing</groupId>
                <artifactId>testing-bom</artifactId>
                <version>1.0.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
</project>
